kina-cli/manifests/demo-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kina-demo-app
  namespace: default
  labels:
    app: kina-demo-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: kina-demo-app
  template:
    metadata:
      labels:
        app: kina-demo-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.30.2-alpine3.23@sha256:5f979dcfed4ce6461873f087e8c980d6e29b084b9e8776d9704a7e989b5f4898
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
          - |
            envsubst '$MY_POD_NAME $MY_POD_IP $MY_NODE_NAME' < /tmp/templates/index.html > /usr/share/nginx/html/index.html
            echo 'server { listen 80; location / { root /usr/share/nginx/html; add_header Connection "close" always; add_header Cache-Control "no-store" always; } }' > /etc/nginx/conf.d/default.conf
            nginx -g 'daemon off;'
        volumeMounts:
        - name: demo-template
          mountPath: /tmp/templates
      volumes:
      - name: demo-template
        configMap:
          name: kina-demo-content

---
apiVersion: v1
kind: Service
metadata:
  name: kina-demo-service
  namespace: default
  labels:
    app: kina-demo-app
spec:
  selector:
    app: kina-demo-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
