kina-cli/manifests/demo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kina-demo-ingress
  namespace: default
  annotations:
    nginx.org/ssl-redirect: "false"
    nginx.org/server-tokens: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ${CLUSTER_NAME}-control-plane.${DNS_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kina-demo-service
            port:
              number: 80
