kina-cli/manifests/demo-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kina-demo-route
  namespace: default
spec:
  parentRefs:
  - name: ${GATEWAY_NAME}
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: ${GATEWAY_SECTION}
  hostnames:
  - ${CLUSTER_NAME}-control-plane.${DNS_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kina-demo-service
      port: 80
